Escenario preparado para trabajar con varios ejercicios:modificado Gruntfile.js. Falta hacer el ejercicio2

--- a/app/ejercicio1.html
+++ b/app/ejercicio1.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-    <h1>kkkk</h1>
     <form id="formulario" novalidate action="accion.php" method="post">
         <div>
             <label for="nombre">Nombre:
@@ -52,7 +51,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <!-- build:js({app,.tmp}) scripts/main1.js -->
     <script src="scripts/ejercicio1.js"></script>
     <script src="scripts/localization.js"></script>
     <!-- endbuild -->
@@ -60,9 +59,3 @@
 </body>
 
 </html>
-
-
-<!-- Observaciones: 
-     Por defecto los errores en los formularios se inyectan dentro del código html mediante un contenedor label con class="error", justo a continuación del input que dispara el error.
-     Obsérvalo mediante chrome developer tools o firebug.
--->
