--- a/app/ejercicio1.html
+++ b/app/ejercicio1.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+<p>prueba</p>
     <form id="formulario" novalidate action="accion.php" method="post">
         <div>
             <label for="nombre">Nombre:
